--- a/index.html
+++ b/index.html
@@ -4,10 +4,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Food Website</title>
+  <link rel="stylesheet" href="index.css">
+  <title>Best Foods</title>
 </head>
+<h1>Best Foods</h1>
 <body>
-  <H1 style="color: aqua;">BEST FOODS</H1>
-  
+  <section>
+  <div>
+    <img src="Best-Foods.jpg">
+    <P>Top 5 Best-Foods</P>
+    <p><a href="Best-Foods.html">Best Foods</a>
+  </div>
+
+  <div>
+    <img src="best desserts.jpg">
+    <P>Top 5 Best-Desserts</P>
+    <p><a href="best desserts.html">Best Desserts</a>
+  </div>
+
+  <div>
+    <img src="Best snacks.jpg">
+    <p>Top 5 Best-Snacks</p>
+    <p><a href="Best Snacks.html">Best Snacks</a>
+  </div>
+ </section>
+
+
 </body>
 </html>
